2008-02-01  Reinhard Max  <max@suse.de>

	* generic/tkImgGIF.c: Fixed a buffer overflow (CVE-2006-4484).
	* tests/imgPhoto.test: Added a test for the above.

2007-12-31  Don Porter  <dgp@users.sourceforge.net>

	*** 8.4.17 TAGGED FOR RELEASE ***

	* changes:		updates for 8.4.17 release.
	* unix/configure.in:	Add "hu" to LOCALES.
	* unix/configure:	autoconf-2.13

2007-12-18  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXWm.c (ApplyMasterOverrideChanges): Revert 2007-10-26
	change to window class of transient toplevels that are not also
	overrideredirect. [Bug 1845899]

	* macosx/tkMacOSXWm.c (ApplyMasterOverrideChanges): Implement more
	* macosx/tkMacOSXMouseEvent.c (BringWindowForward): X11-like transient
	* macosx/tkMacOSXSubwindows.c (XDestroyWindow):     behaviour by adding
	transient windows to a window group owned by the master window, this
	ensures transients always remain in front of and are collapsed with the
	master; bring master to front when selecting transient windows; restore
	default window group of transients if master destroyed. [Bug 1845899]

	* macosx/tkMacOSXPrivate.h: fix Panther build.

2007-12-13  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenubutton.c (ConfigureMenuButton): trace the
	-textvariable even if an image exists as it may use -compound.

2007-12-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkText.c (DeleteChars, TextEditCmd, updateDirtyFlag): 
	* tests/text.test (text-25.10.1,25.11.[12]): 
	Don't require [update idle] to trigger Modified event [Bug 1809538]
	Modified virtual event should only fire on state change [Bug 1799782]
	Make sure we delete chars before triggering <<Modified>> [Bug 1737288]

2007-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/tkWinInt.h: remove CS_CLASSDC (not recommended for any apps now)
	* win/tkWinX.c:   and simplify WNDCLASS to one style.
	* win/tkWinWm.c:  Reduce wrapper update for exStyle to toolwindow